--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Censor</title>
 
     <!-- my css -->
     <link rel="stylesheet" href="./style.css">
@@ -16,7 +16,7 @@
 <body>
 
     <div class="container">
-        <h1 class="combine">Censuring</h1>
+        <h1 class="combine">Censor</h1>
         
         <!-- imposto il form di input -->
         <!-- il form deve essere composto dall' "action" per indicare dove inviare i dati -->
